# backend/src/main/java/com/mysunriser/backend/controller/PostController.java
@@ -4,6 +4,7 @@ package com.mysunriser.backend.controller;
 import com.mysunriser.backend.dto.CreatePostRequest;
 import com.mysunriser.backend.dto.PostResponse;
 import com.mysunriser.backend.service.postservice;
+import jakarta.validation.Valid;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
@@ -22,7 +23,7 @@ public class PostController {
     }
 
     @PostMapping
-    public String createPost(@RequestBody CreatePostRequest request){
+    public String createPost(@Valid @RequestBody CreatePostRequest request){
         return postservice.initPost(request.toEntity());
     }
 }
